--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Moments</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,11 +35,14 @@
     </div>
     <div class="navbar">
       <h1 class="jersey-20-regular">MOMENTS</h1>
-      <div id="navbutton-container">
-        <a href="#" class="navbutton jersey-20-regular" id="prevmem"
+      <div class="navbutton-container">
+        <a
+          href="/previous-memories.html"
+          class="navbutton jersey-20-regular"
+          id="prevmem"
           >Previous Memories</a
         >
-        <a href="#" class="navbutton jersey-20-regular">Login </a>
+        <a href="/login.html" class="navbutton jersey-20-regular">Login </a>
       </div>
     </div>
     <div id="moment-of-the-day">
