modified:   index.html 	created login frontend:   login.html 	modified:   previous-memories.html 	created register frontend:   register.html 	modified:   styles.css

--- a/previous-memories.html
+++ b/previous-memories.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="navbar">
-      <h1 class="jersey-20-regular">MOMENTS</h1>
+      <a href="index.html"><h1 class="jersey-20-regular">MOMENTS</h1></a>
       <div class="navbutton-container">
         <a
           href="/previous-memories.html"
