--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       </div>
     </div>
     <div class="navbar">
-      <h1 class="jersey-20-regular">MOMENTS</h1>
+      <a href="index.html"><h1 class="jersey-20-regular">MOMENTS</h1></a>
+
       <div class="navbutton-container">
         <a
           href="/previous-memories.html"
