modified:   register.html

--- a/register.html
+++ b/register.html
@@ -53,7 +53,7 @@
           <label for="re-passwd">Re-Enter Password</label>
           <input type="password" name="re-passwd" id="re-passwd" />
         </div>
-        <button>Login</button>
+        <button>Register</button>
         <p class="jersey-20-regular" style="font-size: 20px">
           Already a user?
           <a
