modified:   login.css 	modified:   login.html 	new file:   previous-memories.css 	modified:   previous-memories.html 	new file:   register.css 	modified:   register.html 	modified:   styles.css

--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="register.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +34,7 @@
       </div>
     </div>
     <div id="login-page">
-      <form action="" id="login-form">
+      <form action="" id="register-form">
         <h3 style="font-size: 30px; margin: 0" class="jersey-20-regular">
           Register
         </h3>
